corrected for tests
api requests working